prod/google-cloud/10-app-dashy/auth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-basicauth
  namespace: apps
spec:
  basicAuth:
    secret: traefik-basicauth
