prod/google-cloud/10-app-dashy/dashy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: apps
spec:
  selector:
    app: dashy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
